# aoc2021

./: Cargo.toml  go.mod
day1/: main.go
src/day01/: main.rs
src/day02/: main.rs
src/day03/: main.rs
src/day04/: main.rs
src/day05/: main.rs
src/day06/: main.rs
src/day07/: main.rs
src/day08/: main.rs
src/day09/: main.rs
src/day1/: main.rs
src/day2/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: main.rs
src/day6/: main.rs
src/day7/: main.rs
